--- a/support.html
+++ b/support.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h2>This is Support Page For Kids App !!!</h2>
+    <h2>This is a new Heading for testing on Git !!!</h2>
 </body>
 </html>
