This is my file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h2>This is Kids App Home Page</h2>
     <p>
        deleted just for change
+       <p>brown fog lazy dog</p>
+       <p>this is salar</p>
     </p>
 </body>
 </html>
